Add desc for SEO

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "https://ssuwat.com/"
 languageCode = "en-us"
 title = "Ssuwat"
 theme="semiyak"
+description = "Make applications, web sites by order."
